--- a/Frontend/tallerFront/src/app/plantillas/header/header.component.html
+++ b/Frontend/tallerFront/src/app/plantillas/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+
+<nav class="navbar navbar-dark bg-primary">
+    <span class="navbar-text">
+        Taller TEC
+      </span>
+  </nav>
