--- a/Frontend/tallerFront/src/app/vistas/login/login.component.html
+++ b/Frontend/tallerFront/src/app/vistas/login/login.component.html
@@ -17,8 +17,8 @@
     </form>
 
     <!-- Remind Passowrd -->
-    <div id="formFooter">
-      <a class="underlineHover" href="#">Forgot Password?</a>
+    <div class="alert alert-danger" *ngIf="errorStat">
+      <p>{{ errormsj }}</p>
     </div>
 
   </div>
