avnaces en la conexion front end backend

--- a/Frontend/tallerFront/src/app/vistas/login/login.component.html
+++ b/Frontend/tallerFront/src/app/vistas/login/login.component.html
@@ -11,7 +11,7 @@
 
     <!-- Login Form -->
     <form   [formGroup]="loginForm" (ngSubmit)="onLogin(loginForm.value)">
-      <input type="text" id="login" class="fadeIn second"  placeholder="login" formControlName="usuario">
+      <input type="text" id="login" class="fadeIn second"  placeholder="login" formControlName="email">
       <input type="password" id="password" class="fadeIn third" placeholder="password" formControlName="password">
       <input type="submit" class="fadeIn fourth" value="Log In">
     </form>
