dashboard cliente terminado

--- a/Frontend/tallerFront/src/app/vistas/mainmenu/mainmenu.component.html
+++ b/Frontend/tallerFront/src/app/vistas/mainmenu/mainmenu.component.html
@@ -4,10 +4,10 @@
 
     <h2>Menú principal</h2><br>
 
-    <button type="button" class="btn btn-primary" (click)="gestionEmpleado()"> Gestionar empleados </button>
-    <button type="button" class="btn btn-primary" (click)="gestionCliente()"> Gestionar clientes </button>
-    <button type="button" class="btn btn-primary" (click)="gestionCitas()"> Registro de citas </button>
-    <button type="button" class="btn btn-primary" (click)="gestionFacturacion()"> Facturacion </button>
+    <a href="#" class="btn btn-block btn-success" (click)="gestionEmpleado()"><span class="glyphicon glyphicon-user"></span> Gestión de Empleados</a>
+    <a href="#" class="btn btn-block btn-warning" (click)="gestionCliente()"><span class="glyphicon glyphicon-stats"></span> Gestión de Clientes</a>
+    <a href="#" class="btn btn-block btn-info" (click)="gestionCitas()"><span class="glyphicon glyphicon-book"></span> Registro de Citas</a>
+    <a href="#" class="btn btn-block btn-danger" (click)="gestionFacturacion()"><span class="glyphicon glyphicon-tags"></span> Facturación</a>
 
 </div>
 
