--- a/Frontend/tallerFront/src/app/vistas/dashboard/dashboard.component.html
+++ b/Frontend/tallerFront/src/app/vistas/dashboard/dashboard.component.html
@@ -1,8 +1,11 @@
 <app-header></app-header>
 <div class = "container">
-    <h3> Gestión de Empleados</h3>
+    <h3 style="font-family:'Monaco"> Gestión de Empleados</h3>
     <br>
-    <button type="button" class="btn btn-primary" (click)="nuevoEmpleado()">Nuevo Empleado</button>
+    <div class="col">
+        <button class="col btn btn-lg btn-purple-moon btn-rounded" (click)="nuevoEmpleado()">Nuevo Empleado</button>
+    </div>
+    <br>
 <table class="table table-dark table-hover">
     <thead>
         <tr>
