Login completamente funcional

--- a/Frontend/tallerFront/src/app/vistas/dashboard2/dashboard2.component.html
+++ b/Frontend/tallerFront/src/app/vistas/dashboard2/dashboard2.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 <div class = "container">
-    <h3> Gestión de Empleados</h3>
+    <h3> Gestión de Clientes</h3>
     <br>
-    <button type="button" class="btn btn-primary" (click)="nuevoCliente()">Nuevo Empleado</button>
+    <button type="button" class="btn btn-primary" (click)="nuevoCliente()">Nuevo Clientes</button>
 <table class="table table-dark table-hover">
     <thead>
         <tr>
