--- a/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
+++ b/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
@@ -1,1 +1,43 @@
-<p>editar works!</p>
+<app-header></app-header>
+
+    <div class="container">
+        
+        <form [formGroup]="crearEmpleado">
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> ID</label>
+                <input type="text" class="form-control" placeholder="Identificacion" formControlName="id">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Nombre</label>
+                <input type="text" class="form-control" placeholder="Nombre" formControlName="nombre">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Apellido</label>
+                <input type="text" class="form-control" placeholder="Apellido" formControlName="lastName">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Email</label>
+                <input type="text" class="form-control" placeholder="Email" formControlName="email">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Fecha de Nacimiento </label>
+                <input type="text" class="form-control" placeholder="Fecha de Nacimiento" formControlName="birthDate">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Edad </label>
+                <input type="text" class="form-control" placeholder="Edad" formControlName="age">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Posicion </label>
+                <input type="text" class="form-control" placeholder="Posicion" formControlName="position">
+            </div>
+            <div class="form-group">
+                <label for="exampleFormControlInput1"> Fecha de inicio </label>
+                <input type="text" class="form-control" placeholder="Fecha de inicio" formControlName="startingDate">
+            </div>
+        </form>
+
+    </div>
+
+
+<app-footer></app-footer>
