--- a/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
+++ b/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
@@ -2,7 +2,7 @@
 
     <div class="container">
         
-        <form [formGroup]="crearEmpleado">
+        <form [formGroup]="editarForm">
             <div class="form-group">
                 <label for="exampleFormControlInput1"> ID</label>
                 <input type="text" class="form-control" placeholder="Identificacion" formControlName="id">
