--- a/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
+++ b/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
@@ -35,6 +35,10 @@
                 <label for="exampleFormControlInput1"> Fecha de inicio </label>
                 <input type="text" class="form-control" placeholder="Fecha de inicio" formControlName="startingDate">
             </div>
+            <br><br>
+            <button type="submit" class="btn btn-primary"> Crear </button>
+            <button type="button" class="btn btn-dark" (click)="salir"> Salir </button>
+
         </form>
 
     </div>
