--- a/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
+++ b/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
@@ -2,7 +2,7 @@
 
     <div class="container">
         
-        <form [formGroup]="editarForm" >
+        <form [formGroup]="editarForm" (ngSubmit)="postForm(editarForm.value)">
             <div class="form-group">
                 <label for="exampleFormControlInput1"> Nombre</label>
                 <input type="text" class="form-control" placeholder="Nombre" formControlName="name">
@@ -42,6 +42,7 @@
             </div>
             <br>
             <button class="col btn btn-lg btn-purple-moon btn-rounded">Guardar</button>
+            <button class="col btn btn-lg btn-ultra-voilet btn-rounded">Eliminar</button>
         </form>
     </div>
 
