--- a/Frontend/tallerFront/src/app/vistas/nuevo/nuevo.component.html
+++ b/Frontend/tallerFront/src/app/vistas/nuevo/nuevo.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
             <label for="exampleFormControlInput1"> Nombre</label>
-            <input type="text" class="form-control" placeholder="Nombre" formControlName="nombre">
+            <input type="text" class="form-control" placeholder="Nombre" formControlName="name">
         </div>
         <div class="form-group">
             <label for="exampleFormControlInput1"> Apellido</label>
