--- a/Frontend/tallerFront/src/app/vistas/nuevo2/nuevo2.component.html
+++ b/Frontend/tallerFront/src/app/vistas/nuevo2/nuevo2.component.html
@@ -28,9 +28,11 @@
         </div>
         <br><br>
         <button type="submit" class="btn btn-primary"> Crear </button>
-        <button type="button" class="btn btn-dark" (click)="salir"> Salir </button>
 
     </form>
+    <div class="alert alert-primary" *ngIf="infoStat">
+        <p>{{ infoText }}</p>
+      </div>
 
 </div>
 
