--- a/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
+++ b/Frontend/tallerFront/src/app/vistas/editar/editar.component.html
@@ -42,7 +42,7 @@
             </div>
             <br>
             <button class="col btn btn-lg btn-purple-moon btn-rounded">Guardar</button>
-            <button class="col btn btn-lg btn-ultra-voilet btn-rounded">Eliminar</button>
+            <button class="col btn btn-lg btn-ultra-voilet btn-rounded" (click)="eliminar">Eliminar</button>
         </form>
     </div>
 
