--- a/Frontend/tallerFront/src/app/vistas/nuevo3/nuevo3.component.html
+++ b/Frontend/tallerFront/src/app/vistas/nuevo3/nuevo3.component.html
@@ -7,36 +7,40 @@
             <input type="text" class="form-control" placeholder="Identificacion" formControlName="id">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Nombre</label>
-            <input type="text" class="form-control" placeholder="Nombre" formControlName="name">
+            <label for="exampleFormControlInput1"> Fecha</label>
+            <input type="text" class="form-control" placeholder="Fecha" formControlName="date">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Apellido</label>
-            <input type="text" class="form-control" placeholder="Apellido" formControlName="lastName">
+            <label for="exampleFormControlInput1"> Hora</label>
+            <input type="text" class="form-control" placeholder="Hora" formControlName="time">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Email</label>
-            <input type="text" class="form-control" placeholder="Email" formControlName="email">
+            <label for="exampleFormControlInput1"> Cliente</label>
+            <input type="text" class="form-control" placeholder="ID cliente" formControlName="attendedClient">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Fecha de Nacimiento </label>
-            <input type="text" class="form-control" placeholder="Fecha de Nacimiento" formControlName="birthDate">
+            <label for="exampleFormControlInput1"> Numero de placa </label>
+            <input type="text" class="form-control" placeholder="Placa" formControlName="licensePlate">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Edad </label>
-            <input type="text" class="form-control" placeholder="Edad" formControlName="age">
+            <label for="exampleFormControlInput1"> Branch ID </label>
+            <input type="text" class="form-control" placeholder="Branch ID" formControlName="branchID">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Posicion </label>
-            <input type="text" class="form-control" placeholder="Posicion" formControlName="position">
+            <label for="exampleFormControlInput1"> Servicio requerido </label>
+            <input type="text" class="form-control" placeholder="Numero de servicio" formControlName="requiredService">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Fecha de inicio </label>
-            <input type="text" class="form-control" placeholder="Fecha de inicio" formControlName="startingDate">
+            <label for="exampleFormControlInput1"> Mecanico encargado </label>
+            <input type="text" class="form-control" placeholder="ID mecanico" formControlName="mechanicId">
         </div>
         <div class="form-group">
-            <label for="exampleFormControlInput1"> Password </label>
-            <input type="text" class="form-control" placeholder="Password" formControlName="password">
+            <label for="exampleFormControlInput1"> Asistente encargado </label>
+            <input type="text" class="form-control" placeholder="ID asistente" formControlName="assistantId">
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlInput1"> Partes necesarias </label>
+            <input type="text" class="form-control" placeholder="Partes a pedir" formControlName="necessaryParts">
         </div>
         <br><br>
         <button type="submit" class="btn btn-primary"> Crear </button>
