--- a/Frontend/tallerFront/src/app/vistas/dashboard3/dashboard3.component.html
+++ b/Frontend/tallerFront/src/app/vistas/dashboard3/dashboard3.component.html
@@ -36,5 +36,6 @@
         </tr>
     </tbody>
 </table>
+<button class="col btn btn-lg btn-ultra-voilet btn-rounded">Generar Factura</button>
 </div>
 <app-footer></app-footer>
